[package]
name = "rs-wasm-canvas"
version = "0.1.0"
authors = ["Abraham Egnor <abe.egnor@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1.6"
console_log = "0.1.2"
log = "0.4.8"
wasm-bindgen = { version = "0.2.63" }